--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 		color: white;
 		padding: 2rem 5rem;
 		justify-content: space-between;
-		font-weight: 600;
+		font-weight: 500;
 		align-items: center;
 		gap: 3rem;
 	}
@@ -60,7 +60,7 @@
 	}
 	
 	.header {
-		background-color: black;
+		//background-color: black;
 		height: 10rem;
 		width: 100%;
 	}
@@ -97,7 +97,7 @@
 
 <!--Header-->
 <header class="header" id="header">
-	
+	<p>WIP</p>
 </header>
 <script>
 </script>
