--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 		color: white;
 		padding: 2rem 5rem;
 		justify-content: space-between;
-		font-weight: 500;
+		font-weight: 600;
 		align-items: center;
 		gap: 3rem;
 	}
@@ -64,42 +64,64 @@
 		height: 10rem;
 		width: 100%;
 	}
+	
+	/* ---- particles.js container ---- */ 
+	#particles-js { 
+		position:absolute; 
+		width: 100%; 
+		height: 35rem; 
+		background-color: rgba(0,0,0,0); 
+		background-image: url(""); 
+		background-repeat: no-repeat; 
+		background-size: cover; 
+		background-position: 50% 50%; 
+	} 
+	
 </style>
 </head>
 <body>
-<!--Nav Bar-->
-<nav id="nav" class="nav-bar">
-	<ul class="nav-item-container">
-		<li class="nav-item">
-			<a href="#">ABOUT</a>
-		</li>
-		<li class="nav-item">
-			<a href="#">SKILLS</a>
-		<li class="nav-item">
-			<a href="#">WORKS</a>
-		</li>
-	</ul>
-	<a class="nav-logo" href="#">
-		<span>SORCERIV</span>
-	</a>
-	<ul class="nav-item-container" style="justify-content: flex-end;">
-		<li class="nav-item">
-			<a href="#">EXPERIENCE</a>
-		</li>
-		<li class="nav-item">
-			<a href="#">CONTACT</a>
-		</li>
-		<li class="nav-item">
-			<a href="#">RESUME</a>
-		</li>
-	</ul>
-</nav>
+	<!--Nav Bar-->
+	<nav id="nav" class="nav-bar">
+		<ul class="nav-item-container">
+			<li class="nav-item">
+				<a href="#">ABOUT</a>
+			</li>
+			<li class="nav-item">
+				<a href="#">SKILLS</a>
+			<li class="nav-item">
+				<a href="#">WORKS</a>
+			</li>
+		</ul>
+		<a class="nav-logo" href="#">
+			<span>SORCERIV</span>
+		</a>
+		<ul class="nav-item-container" style="justify-content: flex-end;">
+			<li class="nav-item">
+				<a href="#">EXPERIENCE</a>
+			</li>
+			<li class="nav-item">
+				<a href="#">CONTACT</a>
+			</li>
+			<li class="nav-item">
+				<a href="#">RESUME</a>
+			</li>
+		</ul>
+	</nav>
 
-<!--Header-->
-<header class="header" id="header">
-	<p>WIP</p>
-</header>
-<script>
-</script>
+	<!--Header-->
+	<header class="header" id="header">
+		<!-- particles.js container --> 
+		<div id="particles-js">
+		</div> 
+		<div class="">
+		</div>
+	</header>
+
+
+	<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
+
+	<script>
+			particlesJS("particles-js", {"particles":{"number":{"value":269,"density":{"enable":true,"value_area":1039.584166333467}},"color":{"value":"#ffffff"},"shape":{"type":"circle","stroke":{"width":0,"color":"#000000"},"polygon":{"nb_sides":3},"image":{"src":"img/github.svg","width":100,"height":100}},"opacity":{"value":0.5,"random":true,"anim":{"enable":false,"speed":1,"opacity_min":0.1,"sync":false}},"size":{"value":3,"random":true,"anim":{"enable":false,"speed":40,"size_min":0.1,"sync":false}},"line_linked":{"enable":true,"distance":150,"color":"#ffffff","opacity":0.4,"width":1},"move":{"enable":true,"speed":6,"direction":"none","random":false,"straight":false,"out_mode":"out","bounce":false,"attract":{"enable":false,"rotateX":600,"rotateY":1200}}},"interactivity":{"detect_on":"canvas","events":{"onhover":{"enable":true,"mode":"grab"},"onclick":{"enable":true,"mode":"repulse"},"resize":true},"modes":{"grab":{"distance":400,"line_linked":{"opacity":1}},"bubble":{"distance":400,"size":40,"duration":2,"opacity":8,"speed":3},"repulse":{"distance":200,"duration":0.4},"push":{"particles_nb":4},"remove":{"particles_nb":2}}},"retina_detect":true});var count_particles, stats, update; stats = new Stats; stats.setMode(0); stats.domElement.style.position = 'absolute'; stats.domElement.style.left = '0px'; stats.domElement.style.top = '0px'; document.body.appendChild(stats.domElement); count_particles = document.querySelector('.js-count-particles'); update = function() { stats.begin(); stats.end(); if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) { count_particles.innerText = window.pJSDom[0].pJS.particles.array.length; } requestAnimationFrame(update); }; requestAnimationFrame(update);;
+	</script>
 </body>
 </html>
